--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "name": "Adam Adams"
   },
   "scripts": {
-    "dev": "webpack-dev-server",
+    "dev": "webpack-dashboard -- webpack-dev-server",
     "prod": "webpack -p"
   },
   "license": "ISC",
@@ -15,6 +15,8 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "extract-text-webpack-plugin": "^2.1.0",
+    "jest": "^19.0.2",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^4.4.5",
     "react-rnd": "^4.2.0",
     "react-router": "^2.6.1",
@@ -23,6 +25,7 @@
     "redux-promise-middleware": "^3.3.2",
     "redux-thunk": "^2.1.0",
     "webpack": "^2.3.2",
+    "webpack-dashboard": "^0.3.0",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
